# simple-onboarding

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
app/: .env.example  api.py  autoLogging.py  auto_logging.py  company_data.py  config.py  dnb_client.py  google_client.py  main.py  openai_response_format.json  requirements.txt  response.py  responses.py  util.py
app/clients/: BaseClient.py  base_client.py  dnb_client.py  google_client.py  openai_client.py  openregister_client.py
app/test_files/: test_dataByPDF.py  test_dataFromPDF.py
docs/: api.md  clients.md
